--- a/index.html
+++ b/index.html
@@ -14,37 +14,236 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="logotype"><img src="images/logo.png" alt="logo"></div>
-
-            <nav class="navigation">
-                <ul>
-                    <li class="tab"><a href="#">Главная</a></li>
-                    <li class="tab"><a href="#">Автомобили</a></li>
-                    <li class="tab"><a href="#">Бронирование авто</a></li>
-                </ul>
-            </nav>
+    <header class="container">
+        <div class="logotype">
+            <img src="images/logo.png" alt="logo">
         </div>
+
+        <nav class="navigation">
+            <ul>
+                <li class="tab"><a href="#">Главная</a></li>
+                <li class="tab"><a href="#">Автомобили</a></li>
+                <li class="tab"><a href="#">Бронирование авто</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section class="main">
-        <div class="container">
-            <div class="main-info">
-                <h1>Аренда премиальных автомобилей</h1>
-                
-                <p>
-                    В нашем клубе имеется солидная коллекция спортивных автомобилей — от достаточно распространенных
-                    серийных
-                    машин до настоящего гоночного эксклюзива. Воспользуйтесь уникальной возможностью побывать за рулем
-                    настоящей
-                    легенды и узнать, на что она способна за пределами гоночной трассы!
-                </p>
+        <div class="main-info container">
+            <h1>Аренда премиальных автомобилей</h1>
 
-                <a href="#">Посмотреть автомобили</a>
+            <p>
+                В нашем клубе имеется солидная коллекция спортивных автомобилей — от достаточно распространенных
+                серийных
+                машин до настоящего гоночного эксклюзива. Воспользуйтесь уникальной возможностью побывать за рулем
+                настоящей
+                легенды и узнать, на что она способна за пределами гоночной трассы!
+            </p>
+
+            <a href="#">Посмотреть автомобили</a>
+        </div>
+    </section>
+
+    <section class="car container">
+        <h2>Наш автопарк</h2>
+
+        <div class="variants">
+            <div class="auto">
+                <div class="auto-photo"><img src="images/1.png" alt=""></div>
+
+                <div class="auto-name">Lamborghini Huracan Spyder</div>
+
+                <div class="auto-info">
+                    <div class="auto-specification">
+                        <img src="images/gear.svg" alt="Gear">
+                        <div>Привод</div>
+                        <div>полный</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/wheel.svg" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>5.2 л.с</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/belt.svg" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>2</div>
+                    </div>
+                </div>
+
+                <div class="auto-action"><a href="#">Забронировать</a></div>
+            </div>
+
+            <div class="auto">
+                <div class="auto-photo"><img src="images/2.png" alt=""></div>
+
+                <div class="auto-name">Chevrolet Corvette</div>
+
+                <div class="auto-info">
+                    <div class="auto-specification">
+                        <img src="images/gear.svg" alt="Gear">
+                        <div class="">Привод</div>
+                        <div>полный</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/wheel.svg" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>6.2 л.с</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/belt.svg" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>2</div>
+                    </div>
+                </div>
+
+                <div class="auto-action"><a href="#">Забронировать</a></div>
+            </div>
+
+            <div class="auto">
+                <div class="auto-photo"><img src="images/3.png" alt=""></div>
+
+                <div class="auto-name">Ferrari California</div>
+
+                <div class="auto-info">
+                    <div class="auto-specification">
+                        <img src="images/gear.svg" alt="Gear">
+                        <div class="">Привод</div>
+                        <div>полный</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/wheel.svg" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>3.9 л.с</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/belt.svg" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>4</div>
+                    </div>
+                </div>
+
+                <div class="auto-action"><a href="#">Забронировать</a></div>
+            </div>
+
+            <div class="auto">
+                <div class="auto-photo"><img src="images/4.png" alt=""></div>
+
+                <div class="auto-name">Lamborghini Urus</div>
+
+                <div class="auto-info">
+                    <div class="auto-specification">
+                        <img src="images/gear.svg" alt="Gear">
+                        <div class="">Привод</div>
+                        <div>полный</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/wheel.svg" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>4.0 л.с</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/belt.svg" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>5</div>
+                    </div>
+                </div>
+
+                <div class="auto-action"><a href="#">Забронировать</a></div>
+            </div>
+
+            <div class="auto">
+                <div class="auto-photo"><img src="images/5.png" alt=""></div>
+
+                <div class="auto-name">Audi R8</div>
+
+                <div class="auto-info">
+                    <div class="auto-specification">
+                        <img src="images/gear.svg" alt="Gear">
+                        <div class="">Привод</div>
+                        <div>полный</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/wheel.svg" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>5.2 л.с</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/belt.svg" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>2</div>
+                    </div>
+                </div>
+
+                <div class="auto-action"><a href="#">Забронировать</a></div>
+            </div>
+
+            <div class="auto">
+                <div class="auto-photo"><img src="images/6.png" alt=""></div>
+
+                <div class="auto-name">Аренда Chevrolet Camaro</div>
+
+                <div class="auto-info">
+                    <div class="auto-specification">
+                        <img src="images/gear.svg" alt="Gear">
+                        <div class="">Привод</div>
+                        <div>полный</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/wheel.svg" alt="wheel">
+                        <div>Двигатель</div>
+                        <div>2.0 л.с</div>
+                    </div>
+
+                    <div class="auto-specification">
+                        <img src="images/belt.svg" alt="belt">
+                        <div>Кол-во мест</div>
+                        <div>4</div>
+                    </div>
+                </div>
+
+                <div class="auto-action"><a href="#">Забронировать</a></div>
             </div>
         </div>
     </section>
+
+    <section class="booking container">
+        <h2>Узнать цену и забронировать</h2>
+        <p>
+            Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования
+        </p>
+
+        <div class="form-and-photo">
+            <form action="" class="form">
+                <input type="text" placeholder="Ваше имя">
+                <input type="text" placeholder="Ваш телефон">
+                <input type="text" placeholder="Автомобиль, который вас интересует">
+
+                <a href="#">Узнать цену</a>
+            </form>
+
+            <img src="images/rolls.jpg" class="photo-for-form" alt="Rolls">
+        </div>
+    </section>
+
+    <footer class="container">
+        <div class="logotype">
+            <img src="images/logo.png" alt="logo">
+        </div>
+
+        <div class="rights">Все права защищены</div>
+    </footer>
 </body>
 
 </html>
